--- a/liaendmembers.Rcheck/liaendmembers/DESCRIPTION
+++ b/liaendmembers.Rcheck/liaendmembers/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: liaendmembers
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Find Endmembers For Lead Isotope Analysis
 Version: 0.1.0
 Authors@R: c(
     person(
@@ -9,13 +9,12 @@ Authors@R: c(
       role = c("aut", "cre")
     )
   )
-Description: More about what it does (maybe more than one line).
-    Continuation lines should be indented.
+Description: Finds endmembers from a set of Lead Isotope Points using Principle Component analysis and the Geochron slope according to the two-stage model.
 License: MIT
 Encoding: UTF-8
 RoxygenNote: 7.3.2
 NeedsCompilation: no
-Packaged: 2025-08-06 18:50:20 UTC; kd
+Packaged: 2025-08-07 08:46:07 UTC; kd
 Author: Karan Desai [aut, cre]
 Maintainer: Karan Desai <workforce.karan@gmail.com>
-Built: R 4.1.2; ; 2025-08-06 18:50:21 UTC; unix
+Built: R 4.1.2; ; 2025-08-07 08:46:09 UTC; unix
